fix the spacing of the header and nav-ul elements

--- a/index.css
+++ b/index.css
@@ -13,16 +13,43 @@ body{
     height: max-content;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 header{
     margin: -.4rem auto 1rem;
     text-align: center;
-    background-color: rgb(0, 157, 255);
-    width: 99.9%;
+    background-color: rgb(0, 110, 255);
+    width: 100%;
     border-radius: 0 .4rem 0 .4rem;
     color: white;
     display: flex;
     gap: 4rem;
+    justify-content: space-around;
+    position: relative;
+}
+header h1{
+    padding-left: 1.5rem;
+}
+header ul{
+    display: flex;
+    padding: 18px;
+    border-radius: 10px;
+    justify-content: space-evenly;
+    position: relative;
+    width: 70%;
+}
+.nav-ul{
+    list-style-type: none;
+}
+
+.nav-li a{
+    text-decoration: none;
+    color: rgb(245, 245, 245);
+    margin: 0 .5rem;
+}
+
+.nav-li a:hover {
+    color: rgba(245, 245, 245, .8);
 }
 div{
     position: relative;
@@ -111,22 +138,4 @@ footer ul li{
 footer ul li a{
     text-decoration: none;
     color: white;
-}
-.nav-ul {
-    list-style-type: none;
-    display: flex;
-    padding: 18px;
-    justify-content: space-evenly;
-    background-color: rgb(0, 110, 255);
-    border-radius: 10px;
-}
-
-.nav-li a{
-    text-decoration: none;
-    color: rgb(245, 245, 245);
-
-}
-
-.nav-li a:hover {
-    color: rgba(245, 245, 245, .8);
 }
